tests/should_fail/syntax_call_non_function.nv
module main

// SHOULD FAIL: calling a non-function value as a function
let x = 42
x()
